--- a/components/vnuesjhch-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/vnuesjhch-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: vnuesjhch-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:e55c25d7d880504a2e8b49d51d82e998e09184e4@sha256:05dd83aee1a2a3aa4b2332957d5c2773f81eb78d3a2742f5cbe597582d3675fa
+          name: container-image
